--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/js-sha1/build/sha1.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -75,10 +76,10 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/device.js"></script>
     <script src="scripts/services/milkcocoafactory.js"></script>
     <script src="scripts/services/messageservicefactory.js"></script>
+    <script src="scripts/services/senderid.js"></script>
     <!-- endbuild -->
   </body>
 </html>
